# automaton-auditor-fde-week2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TRP1 Challenge Week 2_ The Automaton Auditor.md  app.py  pyproject.toml  run_audit.py
audit/report_bypeer_received/: audit_report.md
audit/report_onpeer_generated/: audit_report.md
audit/report_onself_generated/: audit_report.md
reports/: final_report.tex  interim_report.tex  phase0-1_summary.md
src/: __init__.py  graph.py  prompts.py  state.py
src/nodes/: __init__.py  chief_justice.py  detectives.py  judges.py  justice.py
src/tools/: __init__.py  doc_tools.py  repo_tools.py  vision_tools.py
tests/: __init__.py  test_chief_justice.py  test_detectives.py  test_doc_tools.py  test_graph.py  test_judges.py  test_justice.py  test_prompts.py  test_repo_tools.py  test_state.py  test_supplementary_tools.py  test_vision_tools.py
